# backblaze-cloud

./: .gitignore  README.md  app.py  config.example.py  pyproject.toml  server.py  start.sh
b2browser/: __init__.py  b2.py  ls_cache.py  paths.py  preview.py  utils.py
b2browser/templates/: base.html  folder.html  folder_content.html
cloud/: __init__.py  b2.py  content_types.py  data.py  paths.py  settings.py  utils.py
cloud/templates/: base.html  file.html  folder.html
static/: main.css  main.js  main.scss
