[tool.poetry]
name = "b2-cloud"
version = "0.1.0"
description = ""
authors = ["Maurice Frank <maurice.frank@posteo.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8.5"
sanic = "^20.12.0"
sanic-jinja2 = "^0.8.0"
rich = "^9.6.1"
b2sdk = "^1.2.0"
pillow = "^8.1.0"
Sanic-HTTPAuth = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
